clusters/home/apps/memos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos 
  labels:
    app: memos 
  namespace: memos 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: memos 
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: memos 
    spec:
      enableServiceLinks: false
      volumes:
      - name: memos-longhorn
        persistentVolumeClaim:
          claimName: memos-pvc
      containers:
      - image: neosmemo/memos:latest 
        name: memos 
        imagePullPolicy: Always
        ports:
        - containerPort: 5230 
          protocol: TCP
          name: http 
        volumeMounts:
        - mountPath: /var/opt/memos
          name: memos-longhorn
          subPath: memos
