clusters/home/apps/memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos 
  labels:
    app: memos 
  namespace: memos 
spec:
  ports:
  - port: 5230 
    name: memos 
    targetPort: 5230 
  selector:
    app: memos
